# pyxcselect

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
xcselect/: __init__.py  xcrun.py  xcselect.py
xcselect/tools/: pyxcrun.py  pyxcselect.py
